# gazebo_tutorial

beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/scripts/: receiver.cpp  receiver.py  talker.cpp  talker.py
